--- a/Ecommerce.UI/Shared/Ecommerce.UI.Shared.csproj
+++ b/Ecommerce.UI/Shared/Ecommerce.UI.Shared.csproj
@@ -4,7 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>1198e359-43b5-437a-b6b4-265f23b91ee8</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
+  </ItemGroup>
 
   <ItemGroup>
     <SupportedPlatform Include="browser" />
