--- a/Ecommerce.UnitOfWork/Ecommerce.UnitOfWork.csproj
+++ b/Ecommerce.UnitOfWork/Ecommerce.UnitOfWork.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="UOW\" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.13" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Ecommerce.Infrastructure\Ecommerce.Infrastructure.csproj" />
+    <ProjectReference Include="..\Ecommerce.Interface\Ecommerce.Interface.csproj" />
   </ItemGroup>
 
 </Project>
