--- a/Ecommerce.Api/Ecommerce.Api.csproj
+++ b/Ecommerce.Api/Ecommerce.Api.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>56c8aaa2-9661-4282-b42b-850af0727b2c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
