--- a/Ecommerce.Api/appsettings.json
+++ b/Ecommerce.Api/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost\\sqlexpress;database=blazorecommerce;trusted_connection=true"
+  },
+  "AppSettings": {
+    "Token": "my top secret key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
