--- a/Ecommerce.Api/appsettings.json
+++ b/Ecommerce.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost\\sqlexpress;database=blazorecommerce;trusted_connection=true"
+    "DefaultConnection": "Server=LAPTOP-16JNG16A\\SQLEXPRESS01;database=blazorecommerce;trusted_connection=true"
   },
   "AppSettings": {
     "Token": "my top secret key"
