migrations ok apparently

--- a/Ecommerce.Api/Ecommerce.Api.csproj
+++ b/Ecommerce.Api/Ecommerce.Api.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\Ecommerce.Ioc\Ecommerce.Ioc.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
