--- a/Ecommerce.UI/Shared/Ecommerce.UI.Shared.csproj
+++ b/Ecommerce.UI/Shared/Ecommerce.UI.Shared.csproj
@@ -14,4 +14,8 @@
   <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Dto\" />
+  </ItemGroup>
 </Project>
