--- a/Ecommerce.UI/Server/appsettings.json
+++ b/Ecommerce.UI/Server/appsettings.json
@@ -1,6 +1,23 @@
 {
+  "OAuth": {
+    "Authority": "https://sandboxapi.g2a.com/",
+    "TokenEndpointPath": "oauth/token",
+    "ClientId": "ibHtsEljmCxjOFAn",
+    "ClientSecret": "HrsPmuOlWjqBMHnQWIgfchUqBTBYcRph"
+  },
+  "G2ASettings": {
+    "ClientId": "ibHtsEljmCxjOFAn",
+    "ClientSecret": "HrsPmuOlWjqBMHnQWIgfchUqBTBYcRph",
+    "Email": "contato@sapienssoftwarehouse.com"
+  },
+  "G2AUrl": {
+    "UrlExportProduct": "products"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost\\sqlexpress;database=blazorecommerce;trusted_connection=true"
+  },
+  "AppSettings": {
+    "Token": "my top secret key"
   },
   "Logging": {
     "LogLevel": {
