commit identity migrations

--- a/Ecommerce.Api/appsettings.json
+++ b/Ecommerce.Api/appsettings.json
@@ -11,5 +11,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "GoogleAuthentication": {
+    "Google": {
+      "ClientId": "928083295628-ofgtmea97bc3ekv5aivgao95vh3ugipf.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
   "AllowedHosts": "*"
 }
