--- a/Ecommerce.Interface/Ecommerce.Interface.csproj
+++ b/Ecommerce.Interface/Ecommerce.Interface.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Ecommerce.UI\Shared\Ecommerce.UI.Shared.csproj" />
   </ItemGroup>
 
