--- a/Ecommerce.UI/Server/appsettings.json
+++ b/Ecommerce.UI/Server/appsettings.json
@@ -19,6 +19,12 @@
   "AppSettings": {
     "Token": "my top secret key"
   },
+  "GoogleAuthentication": {
+    "Google": {
+      "ClientId": "928083295628-ofgtmea97bc3ekv5aivgao95vh3ugipf.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
