--- a/Ecommerce.UnitOfWork/Ecommerce.UnitOfWork.csproj
+++ b/Ecommerce.UnitOfWork/Ecommerce.UnitOfWork.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.13" />
   </ItemGroup>
 
