--- a/Ecommerce.Api/appsettings.json
+++ b/Ecommerce.Api/appsettings.json
@@ -5,6 +5,12 @@
   "AppSettings": {
     "Token": "my top secret key"
   },
+  "JwtConfig": {
+    "ValidIssuer": "https://localhost:7056",
+    "ValidAudience": "https://localhost:7056/",
+    "secret": "my top secret key Jwt",
+    "expiresIn": 10
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
